# stonkscollect

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  FEATURES.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/docs/: README.md  analysis.md  api.md  architecture.md  collection.md  configuration.md  data-model.md  testing.md
backend/migrations/: 0001_init.sql  0002_company_state.sql  0003_auth.sql  0004_graham.sql  0005_ohlc.sql  0006_ratios_period.sql  0007_company_profile.sql  0008_company_state_index.sql  0009_notes.sql  0010_company_employees.sql  0011_http_cache.sql  0012_source_errors.sql  0013_discrepancy_unique.sql  0014_indices.sql  0015_ownership_index.sql  0016_user_profile.sql  0017_watch_groups.sql  0018_company_status.sql  0019_query_indexes.sql  0020_user_settings.sql
backend/src/: README.md  api.rs  auth.rs  config.rs  domain.rs  graham.rs  http.rs  lib.rs  main.rs  net.rs  pipeline.rs  ratios.rs  reconcile.rs  scheduler.rs  store.rs  testutil.rs
backend/src/collectors/: edgar.rs  edgar_ownership.rs  fmp.rs  mod.rs  news.rs  scrape.rs  yahoo.rs
backend/src/pipeline/: collect.rs  enrich.rs  mod.rs  orchestrate.rs
backend/src/store/: accounts.rs  analytics.rs  companies.rs  db.rs  mod.rs  records.rs  runs.rs
backend/tests/: health.rs
backend/tests/fixtures/: company_tickers.json  edgar_companyfacts.json  edgar_form4_joint.xml  edgar_form4_single.xml  edgar_ownership_submissions.json  edgar_submissions.json  fmp_income.json  fmp_prices.json  fmp_profile.json  fmp_ratios.json  news_finnhub.json  news_rss.xml  scrape_financials.html  yahoo_assetprofile.json  yahoo_missing_open.json  yahoo_vmc.json
docs/: Dockerfile  README.md  _sidebar.md  api-reference.md  architecture.md  collectors.md  data-models.md  deployment.md  features.md  financials.md  index.html  roadmap.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/docs/: README.md  architecture.md  components.md  data-and-api.md  datagrid.md  testing.md
frontend/e2e/: dashboard.spec.ts  smoke.spec.ts
frontend/src/: App.test.tsx  App.tsx  README.md  api.test.ts  api.ts  chartData.test.ts  chartData.ts  constants.ts  format.test.ts  format.ts  index.css  quote.test.ts  quote.ts  types.ts
frontend/src/charts/: CompareChart.tsx  GrahamChart.tsx  IncomeChart.tsx  PriceChart.tsx  RatioChart.tsx  chartResize.ts
frontend/src/components/: AllStocks.tsx  AuthForm.tsx  CompanyView.tsx  Compare.tsx  CompareView.test.tsx  CompareView.tsx  Dashboard.tsx  DataGrid.test.tsx  DataGrid.tsx  DiscrepancyPanel.tsx  FreshnessBadge.tsx  GrahamScorecard.tsx  HoldersPanel.test.tsx  MarketSummary.test.tsx  MetricsSummary.tsx  NewsFeed.tsx  (+14 more)
(+37 files in other folders)
