[package]
name = "stonkscollect-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "stonkscollect_backend"
path = "src/lib.rs"

[[bin]]
name = "stonkscollect-backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
