[package]
name = "stonkscollect-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "stonkscollect_backend"
path = "src/lib.rs"

[[bin]]
name = "stonkscollect-backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
arrow = "53"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
parquet = { version = "53", features = ["arrow"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rss = "2"
scraper = "0.20"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
