[package]
name = "stonkscollect-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "stonkscollect_backend"
path = "src/lib.rs"

[[bin]]
name = "stonkscollect-backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "timeout", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libsql = "0.6"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
argon2 = "0.5"
arrow = "53"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
sha2 = "0.10"
dotenvy = "0.15"
futures = "0.3"
parquet = { version = "53", features = ["arrow"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies"] }
rss = "2"
scraper = "0.20"
include_dir = "0.7"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
